objects/Tensilica_Product_Term_Bases__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines various term base duration for Tensilica products.</description>
    <fields>
        <fullName>Design_Term_Base__c</fullName>
        <description>Denotes duration in months.</description>
        <label>Design Term Base</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <description>Denotes the tensilica product group like Term etc.</description>
        <label>Group Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Term_Base__c</fullName>
        <description>Denotes duration in months.</description>
        <label>Term Base</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Tensilica Product Term Bases</label>
</CustomObject>